# OOPProjects

A45/: DateTime.cpp  DateTime.h  Event.cpp  Event.h  dynamicVector.cpp  dynamicVector.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  service_user.cpp  service_user.h  test.cpp  test.h  ui.cpp  ui.h
A89/: CMakeLists.txt  CSVFile.cpp  CSVFile.h  DateTime.cpp  DateTime.h  Event.cpp  Event.h  Exceptions.h  FileSaver.cpp  FileSaver.h  Gui.cpp  Gui.h  HTMLFile.cpp  HTMLFile.h  Repository.cpp  Repository.h  ServiceAdmin.cpp  ServiceAdmin.h  ServiceUser.cpp  ServiceUser.h  TextFileRepo.cpp  TextFileRepo.h  Ui.cpp  Ui.h  Validator.cpp  Validator.h  main.cpp
ShoppingListQT/: CMakeLists.txt  Gui.cpp  Gui.h  Item.cpp  Item.h  Repository.cpp  Repository.h  Service.cpp  Service.h  main.cpp
